# MTT-File-Manager-RUST

./: # Audit Fix Continuation Plan — Remainin.md  # Audit Fix Implementation — Phased.md  .cursorrules  .gitignore  AGENTS.md  AGENT_RULES.md  ANALISE_PROJETO.md  AUDIT_FIX_PLAN.md  AUDIT_REPORT.md  AUDIT_REPORT_REVIEW_2026-06-06.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_FINAL.md  Cargo.toml  LICENSE  MEMORY_FOOTPRINT_AUDIT_2026-04-27.md  NOTICE  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_UI_REPORT.md  PLANO_IMPLEMENTACAO.md  PLANO_MIGRACAO_RUST_EGUI_PARA_CPP_COMPLETO.md  PLANO_REFATORACAO_MODULOS_MONOLITOS_2026-02-08.md  PLAN_VOLUME_LOCK.md  PLAN_file_tags.md  PLAN_quick_access.md  README.md  RELATORIO_REVISAO_COMPLETA_2026-02-07.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  THIRD_PARTY_NOTICES.md  app.manifest  build.rs  build_err.txt  build_error.txt  build_errors.txt  build_errors_2.txt  build_errors_3.txt  build_final_check.txt  build_output.txt  build_tab_errors.txt  cargo_check_output.txt  (+37 more)
.agent/rules/: regras.md  regras2.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
benches/: image_viewer_decode.rs  shell_ops_blocking.rs
crates/mtt-search-protocol/: Cargo.toml
crates/mtt-search-protocol/src/: lib.rs
crates/mtt-search-service/: Cargo.toml
crates/mtt-search-service/src/: child_index.rs  file_index.rs  fs_walker.rs  index_db.rs  indexing_progress.rs  ipc_authorization.rs  ipc_server.rs  main.rs  memory_trim.rs  mft_reader.rs  name_arena.rs  path_resolver.rs  record_store.rs  security_policy.rs  service_control.rs  usn_journal.rs  volume_indexers.rs  volume_indices.rs
crates/mtt-search-service/src/index_db/: binary.rs  fts.rs  integrity.rs  mod.rs  sync.rs
crates/mtt-search-service/src/ipc_server/: handler.rs  mod.rs  pipe_io.rs
crates/mtt-search-service/src/volume_indexers/: mod.rs  non_usn.rs  usn.rs
docs/: 01_overview.md  02_build_run_debug.md  03_architecture.md  04_module_map.md  05_dependencies_stack.md  06_key_flows.md  07_storage_config.md  08_logging_errors_telemetry.md  09_performance_optimizations.md  09_support_playbook.md  10_file_pilot_optimizations.md  10_stability_audit_2026-04-05.md  10_viewers.md  11_monolith_refactor_plan.md  11_ux_performance_implementation_plan.md  ACTION_PLAN_PERF.md  ACTION_PLAN_SCROLL_THUMBS.md  ARCHITECTURE.md  ARQUITETURA.md  AUDIT_FIX_PLAN.md  AUDIT_REPORT.md  BITSTREAM_SNIFFING.md  CLIPBOARD_INTEGRATION.md  CODEC_RESOLUTION.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_NEW.md  EAC3_CODEC_FIX.md  EMBEDDED_ASSETS_FIX.md  FULL_CODE_AUDIT_REPORT.md  INDEX.md  MAIN_RS_SECTIONS.md  MEDIA_METADATA_FEATURE.md  MEDIA_PREVIEW_SYSTEM.md  PADROES_REUTILIZAVEIS.md  PHASE5_STATUS.md  PHASE7_OPERATIONS_SPLIT.md  PHASE8_CLEANUP_AND_IMPROVEMENTS.md  PLANO_BUSCA_GLOBAL.md  PLANO_OTIMIZACAO_HDD.md  PLANO_OTIMIZACAO_HDD_AVANCADO.md  (+22 more)
installer/: build_installer.ps1  setup.iss
locales/: en.yml  pt-BR.yml
mpv_ui/portable_config/: input.conf  mpv.conf
plans/: async-consistency-probe.md  code-review-priority-src-crates.md
src/: embedded_assets.rs  gpu_backend.rs  image_viewer_minimal.rs  lib.rs  main.rs  main.rs.backup  main.rs.refactored  main_functional_backup.rs  preview_helpers.txt  viewer_processes.rs  viewer_runtime.rs
src/app/: batch_rename.rs  cache_state.rs  drag_drop_state.rs  drive_state.rs  dual_panel.rs  file_hash.rs  file_operation_state.rs  folder_size_state.rs  global_search_state.rs  init.rs  init_bootstrap.rs  init_post_startup.rs  init_preferences.rs  init_state_builders.rs  init_temp.txt  layout_state.rs  live_file_size.rs  message_handler.rs  miller_columns_state.rs  mod.rs  navigation_state.rs  operations.rs  organizer_state.rs  shortcuts.rs  state.rs  state_new.rs  ui_state.rs  worker_state.rs
src/application/: clipboard.rs  context_menu.rs  file_operations.rs  mod.rs  navigation.rs  notification.rs  renaming.rs  sorting.rs  sorting_optimized.rs  state.rs  watcher.rs
src/domain/: cloud_root.rs  errors.rs  file_entry.rs  file_tag.rs  folder_lock.rs  mod.rs  organizer_rule.rs  pinned_folder.rs  special_paths.rs  thumbnail.rs
src/image_viewer/: app.rs  cache.rs  indexer.rs  ipc.rs  loader.rs  metrics.rs  mod.rs  thumbnail_cache.rs  wallpaper.rs
src/infrastructure/: adaptive_batch.rs  archive_extract.rs  cache.rs  cache_first.rs  db_utils.rs  diagnostic_logger.rs  directory_cache.rs  directory_dirty_registry.rs  directory_index.rs  disk_cache.rs  drive_watcher.rs  drive_watcher_integration.rs  filesystem_cache.rs  folder_compose.rs  global_search.rs  icon_disk_cache.rs  io_priority.rs  mod.rs  ntfs_reader.rs  onedrive.rs  organizer.rs  security.rs  shell_menu_worker.rs  threading.rs  user_session_search.rs  usn_journal.rs  virtual_drive_config.rs  watcher.rs  windows_api.rs  windows_clipboard.rs
src/pdf_viewer/: document_state.rs  mod.rs  ocr.rs  render_worker.rs  renderer.rs  search.rs  selection.rs  sidebar.rs  thread.rs  toolbar.rs  viewer_app.rs  virtual_layout.rs  webview.rs  window.rs
src/tabs/: mod.rs
src/text_viewer/: mod.rs  viewer_app.rs
src/ui/: address_bar.rs  app.rs  app_impl.rs  app_impl_backup.rs  app_impl_extract.txt  app_impl_header.txt  cache.rs  components.rs  context_menu.rs  core.rs  global_search_overlay.rs  grid.rs  header.rs  icon_loader.rs  mod.rs  navigation.rs  operations.rs  preview_panel.rs  sidebar.rs  sidebar_cloud_roots.rs  sidebar_tree.rs  status_bar.rs  svg_icons.rs  tab_bar.rs  theme.rs  toolbar.rs  views.rs  widgets.rs
src/video_player/: app.rs  mod.rs
src/workers/: archive_extraction_worker.rs  batch_thumbnail_loader.rs  file_operation_worker.rs  folder_preview_worker.rs  folder_scanner.rs  global_search_worker.rs  idle_warmup.rs  mod.rs  predictive_prefetch.rs  prefetch_worker.rs  tagged_results_worker.rs  thumbnail_loader.rs  thumbnail_worker.rs  usn_watcher.rs
third_party_licenses/: GPL-2.0.txt  LGPL-2.1.txt  MATERIAL-DESIGN-ICONIC-FONT-NOTICE.txt  MPV-COPYRIGHT-NOTICE.txt  PDFIUM-BINARIES-LICENSE.txt  PDFIUM-LICENSE.txt  PROVENANCE.md  README.md  SOURCE-AVAILABILITY.md  UNRAR-LICENSE.txt
(+398 files in other folders)
