[package]
name = "mtt-file-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
rayon = "1.10"
rfd = "0.15"
lru = "0.12"
notify = "6.1.1"
natord = "1.0"
dirs = "5.0"
dashmap = "5.5"
image = { version = "0.25", features = ["webp"] }
thiserror = "2.0"
tempfile = "3.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
