[package]
name = "mtt-file-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
rayon = "1.10"
walkdir = "2.5"
rfd = "0.15"
lru = "0.12"
notify = "6.1.1"
natord = "1.0"
dirs = "5.0"
dashmap = "5.5"
image = { version = "0.25", features = ["webp", "gif"] }
thiserror = "2.0"
tempfile = "3.10"
rusqlite = { version = "0.32", features = ["bundled"] }
webp = "0.3"  # For lossy WebP compression with quality control
kamadak-exif = "0.5"  # For direct EXIF reading from JPEG files
clipboard-win = "5.4"  # For Windows clipboard integration (CF_HDROP format)
resvg = "0.44"          # For SVG icon rendering
usvg = "0.44"           # For SVG parsing
tiny-skia = "0.11"      # Rasterization backend for resvg


[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dwm",
    "Win32_Media_MediaFoundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_LibraryLoader",
    "Win32_System_Ioctl",
]

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
