[workspace]
members = [".", "crates/mtt-search-protocol", "crates/mtt-search-service"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }

[package]
name = "mtt-file-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["persistence", "wgpu", "glow"] }
rayon = "1.10"
walkdir = "2.5"
rfd = "0.15"
lru = "0.12"
notify = { version = "6.1.1", optional = true }
natord = "1.0"
dirs = "5.0"
dashmap = "5.5"
image = { version = "0.25", features = ["webp", "gif"] }
memmap2 = "0.9"
thiserror = "2.0"
tempfile = "3.10"
rusqlite = { version = "0.32", features = ["bundled"] }
webp = "0.3"  # For lossy WebP compression with quality control

kamadak-exif = "0.5"  # For direct EXIF reading from JPEG files
rustc-hash = "2.0"    # FxHashSet/FxHashMap - faster hashing for PathBuf keys
clipboard-win = "5.4"  # For Windows clipboard integration (CF_HDROP format)
resvg = "0.44"          # For SVG icon rendering
usvg = "0.44"           # For SVG parsing
tiny-skia = "0.11"      # Rasterization backend for resvg
mpv = { package = "libmpv2", version = "5.0.3" }
raw-window-handle = "0.6"
serde_json = "1.0"
crossbeam-channel = "0.5.15"
fxhash = "0.2.1"
once_cell = "1.19"  # For lazy static initialization
parking_lot = "0.12"
blake3 = "1.5"     # Stable 128-bit hash for cache keys (SEC-01)
log = "0.4"        # Structured logging framework (SEC-02/PERF-04)
env_logger = "0.11" # Logger backend with level filtering
pdfium-render = { version = "0.8.37", features = ["thread_safe"] }
mtt-search-protocol = { path = "crates/mtt-search-protocol" }
bincode = { workspace = true }
serde = { workspace = true }
rust-i18n = "3"
zip = "2"                   # Native ZIP extraction fallback when Shell fails
sevenz-rust = "0.6"         # Native 7z extraction fallback when Shell fails
unrar = "0.5"               # Native RAR extraction (statically links unrar C++ source)
tar = "0.4"                 # Native TAR archive reading
flate2 = "1"                # Gzip decompression for .tar.gz / .tgz
bzip2 = "0.5"               # Bzip2 decompression for .tar.bz2 / .tbz2
xz2 = "0.1"                 # XZ/LZMA decompression for .tar.xz / .txz
zstd = "0.13"               # Zstandard decompression for .tar.zst / .tzst
# video-rs = { version = "0.9", features = ["ndarray"] }
# ndarray = "0.16"            # Required by video-rs for frames
# rodio = "0.19"



[dependencies.windows]
version = "0.61.0"
features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dwm",
    "Win32_Media_MediaFoundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_LibraryLoader",
    "Win32_System_Ioctl",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Variant",
    "Win32_System_Search_Common",
    "Win32_System_Services",
    "Win32_Storage_Vhd",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_WindowsProgramming",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_System_RemoteDesktop",
    "Win32_NetworkManagement_WNet",
    "Win32_Globalization",
    "Wdk_Storage_FileSystem",
    "Foundation",
    "Foundation_Collections",
    "Data_Pdf",
    "Storage",
    "Storage_Streams",
    "Media_Ocr",
    "Graphics_Imaging",
    "Win32_System_WinRT",
]

[target.'cfg(windows)'.dependencies]
wgpu = { version = "24.0", default-features = false, features = ["dx12"] }

[features]
default = ["notify-watcher"]
notify-watcher = ["notify"]





[build-dependencies]
winresource = "0.1"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "image_viewer_decode"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
