[package]
name = "mtt-search-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtt-search-service"

[dependencies]
mtt-search-protocol = { path = "../mtt-search-protocol" }
windows-service = "0.7"
rusqlite = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[dependencies.windows]
version = "0.61.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_System_Threading",
]
