[package]
name = "mtt-search-service"
version = "0.1.0-beta.8"
edition = "2021"

[[bin]]
name = "mtt-search-service"

[dependencies]
mtt-search-protocol = { path = "../mtt-search-protocol" }
windows-service = "0.7"
rusqlite = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
parking_lot = "0.12"
memchr = "2"
mimalloc = { version = "0.1", default-features = false }
libmimalloc-sys = { version = "0.1", features = ["extended"] }
memmap2 = "0.9"

[dependencies.windows]
version = "0.61.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
]
